# cn-cbor

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .mbedignore  .travis.yml  CMakeLists.txt  README.md  cmake-format.yaml  conanfile.py
.github/workflows/: main.yml
cmake/: CoverallsGenerateGcov.cmake
include/cn-cbor/: cn-cbor.h
src/: CMakeLists.txt  cbor.h  cn-cbor.c  cn-create.c  cn-encoder.c  cn-error.c  cn-get.c  cn-print.c  dll-export.h
test/: CMakeLists.txt  cbor_test.c  context.c  context.h  ctest.h  file_test.c  memory_test.c  test.c
